# cuda_wuda_shuda_fluda

./: CMakeLists.txt  README.md  build.sh  defines.h  flu.cpp  flu.cu  kernel.cu  test.csv
include/: defines.h  func_cpu.cuh  kernel.cuh
src/: flu.cu  func_cpu.cu  kernel.cu
